# zavolab_pyutils

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  test_module.ipynb
.github/workflows/: python-app.yml
docs/: README.md
src/genomic_utils/: __init__.py  read_count_data_analysis.py
src/zavolab_pyutils/: __init__.py  annotation.py  frac_sanity.py  motif_metaplot.py  normalize_umi_lengths.py  parsing_workflow_outputs.py  read_count_data_analysis.py  read_count_simulation.py  redefine_qual_and_NHtag.py  visualization.py
tests/: __init__.py  test_annotation.py  test_normalization.py
tests/annotation/: gencode.v42.basic.annotation.top97rows.gtf
tests/tables/: Sanity_input_counts.10repl.tsv  Sanity_input_counts.3repl.tsv
tests/tables/sanity_out_10repl/: cellID.txt  d_delta_vmax.txt  d_mu_vmax.txt  delta_vmax.txt  geneID.txt  log_transcription_quotients_vmax.txt  ltq_error_bars_vmax.txt  mu_vmax.txt  variance_vmax.txt
tests/tables/sanity_out_3repl/: cellID.txt  d_delta_vmax.txt  d_mu_vmax.txt  delta_vmax.txt  geneID.txt  log_transcription_quotients_vmax.txt  ltq_error_bars_vmax.txt  mu_vmax.txt  variance_vmax.txt
